@@ -618,6 +618,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6046: Fixed the library extension when distutils build_ext is used
+  inplace. Initial patch by Roumen Petrov.
+
 - Issue #6041: Now distutils `sdist` and `register` commands use `check` as a 
   subcommand.
 
